# stackchan-idf

./: .gitignore  .gitmodules  CLAUDE.md  JOURNAL.md  Makefile  README.en.md  README.md  THIRD_PARTY_NOTICES.md  partitions_8mb.csv  sdkconfig.defaults  sdkconfig.defaults.atoms3r  sdkconfig.defaults.cores3  sdkconfig.defaults.stopwatch
.claude/skills/release/: SKILL.md
.github/workflows/: host-tests.yml  pages.yml  release.yml
assets/: aokko_face.avdsl  omega_mouth.avdsl  voices.json
assets/voices/: mei16.htsvoice
components/avatar/: CMakeLists.txt  animation.cpp  animation.hpp  avatar.cpp  balloon.cpp  effect.cpp  eye.cpp  eyebrow.cpp  mouth.cpp
components/avatar/include/avatar/: avatar.hpp  canvas_m5gfx.hpp  palette.hpp
components/avatar_vm/: storage.cpp  vm.cpp
components/avatar_vm/include/avatar/: canvas.hpp  draw_context.hpp
components/avatar_vm/test/host/: CMakeLists.txt  test_decoder.cpp  test_fuzz.cpp  test_support.hpp  test_vm.cpp
components/board/: CMakeLists.txt  Kconfig  board.cpp  camera_gc0308.cpp  idf_component.yml  io_expander_py32.cpp  led_strip.cpp  nekomimi_led_strip.cpp  si12t_touch.cpp
components/board/include/board/: board.hpp  camera_gc0308.hpp  io_expander_py32.hpp  led_strip.hpp  nekomimi_led_strip.hpp  si12t_touch.hpp
components/config_service/: CMakeLists.txt  config_service.cpp  config_service_stub.cpp  config_store.cpp  crypto.cpp  crypto.hpp  gatt_settings.cpp  gatt_settings.hpp  ota.cpp  ota.hpp  settings_registry.cpp
components/config_service/include/config_service/: config_service.hpp  config_store.hpp  crypto.hpp  ota.hpp  settings_registry.hpp
components/conversation/: CMakeLists.txt  gemini_live_client.cpp  idf_component.yml  openai_realtime_client.cpp  xiaozhi_client.cpp
components/conversation/include/conversation/: conversation_service.hpp  metrics.hpp  xiaozhi_client.hpp
components/hts_engine/lib/: HTS_gstream.c  HTS_hidden.h  HTS_misc.c  HTS_vocoder.c
components/jtts/: CMakeLists.txt
components/jtts/include/jtts/: jtts.hpp  jvox.hpp  phoneme.hpp
components/jtts/src/: formant_synth.cpp  formant_synth_classic.cpp  formant_tables.cpp  internal.hpp  jtts.cpp  jvox.cpp  kana_table.cpp  phoneme.cpp  prosody.cpp  synth_dsp.hpp  unit_synth.cpp
components/jtts/test/host/: CMakeLists.txt  gen_units.cpp  main.cpp  test_unit.cpp  test_vowels.cpp  unit_demo.cpp  wav_writer.cpp  wav_writer.hpp
components/scs_servo/: CMakeLists.txt  scs_bus.cpp  scs_servo.cpp
components/scs_servo/include/scs_servo/: scs_bus.hpp  scs_servo.hpp
components/scs_servo/test/host/: CMakeLists.txt  test_math.cpp  test_protocol.cpp  test_support.hpp
components/scs_servo/test/host/idf_stub/: esp_err.h  esp_log.h  fake_uart.cpp  fake_uart.hpp
components/scs_servo/test/host/idf_stub/driver/: gpio.h  uart.h
components/scs_servo/test/host/idf_stub/freertos/: FreeRTOS.h  task.h
components/telegram/: CMakeLists.txt  Kconfig  client.cpp
components/telegram/include/telegram/: telegram.hpp
components/tl_expected/: CMakeLists.txt
components/wifi_config_service/: CMakeLists.txt  Kconfig  http_handlers.cpp  http_handlers.hpp  release_ota.cpp  release_ota.hpp  wifi_config_service.cpp
components/wifi_config_service/include/wifi_config_service/: wifi_config_service.hpp
components/wifi_config_service/web/: settings_wifi.html
docs/: fork-notes.md  index.html  licenses.html
main/: CMakeLists.txt  Kconfig.projbuild  ap_screen.cpp  ap_screen.hpp  app_main.cpp  atom_status.cpp  audio_stream_sink.cpp  audio_stream_sink.hpp  captive_portal.cpp  captive_portal.hpp  conversation_task.cpp  conversation_task.hpp  device_ui.cpp  device_ui.hpp  diag.cpp  diag.hpp  idf_component.yml  led_task.cpp  mic_lip_sync_task.cpp  qr_task.cpp  qr_task.hpp  render_task.cpp  render_task.hpp  servo_task.cpp  shared_state.hpp  speech.cpp  speech.hpp  utf8.hpp  wifi_audio.cpp  wifi_audio.hpp  wifi_audio_depacketizer.hpp  wifi_sta.cpp  wifi_sta.hpp
patches/: m5unified.patch
script/: pack_firmware.py
tools/: apply-m5-patches.sh  settings.html  settings_common.js
tools/audio-cli/src/: main.rs
tools/avatar_dsl/: README.md  inject.mjs
tools/jvox/: gen_units_openjtalk.py  pack_jvox.py
tools/remote-flasher/: README.md
tools/remote-flasher/web/: index.html
tools/stackchan-channel/: README.md  index.ts  package.json
wasm/: avatar_wasm.cpp  build.sh  shell.html
wasm/shim/: M5GFX.h  esp_log.h
